css/style.css
/* ... */
@keyframes slowFade {
  0% {
    opacity: 1;
  }
  99.9% {
    opacity: 0;
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}

.custome-dropdowm {
  display: inline;
}

.custome-dropdowm button {
  display: inline-block;
  background: #104565;
  color: #fff;
  font-size: 13px;
  text-transform: uppercase;
  font-weight: 500;
  padding: 8px 10px;
  margin-right: -5px;
  background-color: transparent;
  border: none;
}

.dropdown-menu{
  background-color: #000000d8!important;
}

.custome-dropdowm button:hover{
  background: #f6783a;
}

.dropdown:hover .dropdown-menu {
  display: block;
  margin-top: 0; /* remove the gap so it doesn't close */
}

.dropdown-item{
  color: black;
}

.container .row{
  display: flex;
  justify-content: center;
}

